--- a/.github/workflows/build-and-push-docker-hub.yml
+++ b/.github/workflows/build-and-push-docker-hub.yml
@@ -32,7 +32,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: bsignbkc/express-sample-project:staging
+          tags: tiendq3/cicd2023:staging
 
 
   pull-and-up:
